overflow fixed

--- a/styles.css
+++ b/styles.css
@@ -169,6 +169,9 @@ hr{
 }
 .sv embed{
 	margin: 0 auto;
+	margin-top: 30px;
+	width: 398px;
+	height: 300px;
 }
 .txt{
 	width: 80%;
@@ -402,7 +405,7 @@ footer nav ul{
 	line-height: 2.5em;
 }
 }
-@media screen and (max-width: 400px){
+@media screen and (max-width: 410px){
 	header h1{
 		margin-left: 0;
 	}
